--- a/PD Manual/0-前言与补充材料/001-前言.md
+++ b/PD Manual/0-前言与补充材料/001-前言.md
@@ -12,8 +12,8 @@ Index: 1
 
 其一，在这篇指南中，我们只会展示如何实现功能，基本不会去深入探讨其背后原理。如此做是为了节省篇幅，也因为我们相信绝大多数问题的答案都可以在互联网上找到。
 
-其二，为了确保指南的准确性和适用性，我们使用的所有环境和设置都是标准化的。本指南将以破碎的像素地牢(Shattered Pixel Dungeon)的1.2.3版本公开源码为项目基础，Android Studio作为IDE，Windows作为操作系统，进行指南中所有的操作。在版本相差不大的前提下，使用不同版本的工具/代码遵循本指南通常不会出现太大问题
+其二，为了确保指南的准确性和适用性，我们使用的所有环境和设置都是标准化的。本指南将以破碎的像素地牢(Shattered Pixel Dungeon)的1.2.3版本公开源码为项目基础，Android Studio作为IDE，Windows 10+作为操作系统，进行指南中所有的操作。在版本相差不大的前提下，使用不同版本的工具/代码遵循本指南通常不会出现太大问题，不过对于初学者我们**强烈建议严格遵守包含文件下载在内的本指南的所有步骤。**
 
-与此同时，在你开始制作模组之前，我们建议你阅读本指南提供的两篇补充阅读材料，分别是“信息检索”和“有效提问”。虽然这两份补充阅读材料并不会在模组制作上为你提供直接帮助，但是对于初入模组制作的人来说，它们会让你了解并掌握两个看起来简单却也十分重要的技能。
+与此同时，在你开始制作模组之前，我们建议你阅读本指南提供的两篇补充阅读材料，分别是“信息检索”和“有效提问”。这两份补充阅读材料并不会在模组制作上为你提供直接帮助，但是对于初入模组制作的人来说，它们会让你了解并掌握两个看起来简单却也十分重要的技能。
 
 祝你在像素地牢的模组制作旅程中学有所得，游戏愉快！
